fix(v2): wrap footer help link when label does not fit
OKTA-395123
<<<Jenkins Check-In of Tested SHA: bc8e381e682663373a1eae26f622dcbb4753455e for eng_productivity_ci_bot_okta@okta.com>>>
Artifact: okta-signin-widget
Files changed count: 1
PR Link:

(cherry picked from commit b067a6556cf19e683a4f99c85242c5789053edf7)

--- a/assets/sass/v2/_footer.scss
+++ b/assets/sass/v2/_footer.scss
@@ -1,9 +1,11 @@
 .siw-main-footer {
   .auth-footer {
+    max-width: 100%;
     display: flex;
     flex-direction: column;
     .link {
       padding: 0.3rem 0;
+      word-wrap: break-word;
     }
   }
 }
